fix: settings: font size for expressions too large for item group previews

--- a/src/styles.css
+++ b/src/styles.css
@@ -736,7 +736,7 @@ body {
     white-space: normal !important;
 }
 
-.note-toolbar-setting-item-preview-label.note-toolbar-setting-item-preview-code {
+.note-toolbar-setting-item-preview .note-toolbar-setting-item-preview-code {
     font-size: var(--font-ui-small); 
 }
 
